fixed project card stack spacing

--- a/styles/scrollable.css
+++ b/styles/scrollable.css
@@ -32,7 +32,7 @@
     }
 }
 
-#about-container,
+#about-container, /* does not work because it is at the top of the viewport */
 #career-container,
 #project-container {
     scroll-margin-top: 6rem;
@@ -164,8 +164,9 @@
         & .stack-list {
             display: flex;
             flex-flow: row wrap; 
-            gap: 1rem;
-            margin-top: 1.5rem;
+            column-gap: 1rem;
+            row-gap: 0.5rem;
+            margin-top: 1.25rem;
 
             & div {
                 font-family: var(--sans-serif-font), sans-serif;
